revert README.md